kubernetes/mini/core/volsync-system/volsync/app/clusterwidenetworkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: volsync-b2-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
  egress:
    - toFQDNs: # backblaze b2
        - matchName: "s3.us-east-005.backblazeb2.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints: # kubedns
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
