kubernetes/mini/core/volsync-system/volsync/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: volsync-b2-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
  egress:
    - toFQDNs: # backblaze b2
        - matchName: "s3.us-east-005.backblazeb2.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints: # kubedns
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"

# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: volsync
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8443"
              protocol: "TCP"
